Stop flickering edges where noise is

--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -38,10 +38,10 @@
 .noise-layer
   background-image: url('../images/noise.png')
   position: absolute
-  width: 300%
-  height: 300%
-  top: -100%
-  left: -100%
+  width: 600%
+  height: 600%
+  top: -200%
+  left: -200%
   animation: frantic-noise-movement .2s infinite
   opacity: .2
   z-index: 0
